# ITBS-VoGen

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
notebooks/: train_on_colab.ipynb
scripts/: download_models.sh
src/itbs_vogen/: __init__.py  cli.py  infer.py  train.py
src/itbs_vogen/_compat/: sitecustomize.py
