[project]
name = "itbs-vogen"
version = "0.0.1"
description = "Clean vocal regeneration from AI-separated glitchy vocals, built on RVC."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { file = "LICENSE" }
authors = [{ name = "Arimuri" }]

# Runtime deps for our wrapper itself are minimal — the heavy deps come from
# RVC's own requirements.txt under third_party/rvc/, installed separately.
# See README for setup steps.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[project.scripts]
itbs-vogen = "itbs_vogen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itbs_vogen"]

[tool.ruff]
line-length = 100
target-version = "py310"
